--- a/aspnet-core/src/eConLab.Web.Host/appsettings.json
+++ b/aspnet-core/src/eConLab.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost\\MSSQLSERVER01; Database=eConLabDb; Trusted_Connection=True;"
+    "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
