--- a/aspnet-core/src/eConLab.Migrator/appsettings.json
+++ b/aspnet-core/src/eConLab.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
+    "Default": "Server=localhost\\MSSQLSERVER01; Database=eConLabDb; Trusted_Connection=True;"
   }
 }
