--- a/aspnet-core/src/eConLab.Core/eConLab.Core.csproj
+++ b/aspnet-core/src/eConLab.Core/eConLab.Core.csproj
@@ -22,4 +22,7 @@
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="6.5.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.4.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Projects\" />
+  </ItemGroup>
 </Project>
