--- a/angular/src/assets/appconfig.production.json
+++ b/angular/src/assets/appconfig.production.json
@@ -1,5 +1,5 @@
 {
-  "remoteServiceBaseUrl": "https://localhost:44311",
+  "remoteServiceBaseUrl": "http://emawadsw-001-site2.gtempurl.com",
   "appBaseUrl": "http://localhost:4200",
   "localeMappings": [
     {
