--- a/aspnet-core/src/eConLab.Web.Host/appsettings.Staging.json
+++ b/aspnet-core/src/eConLab.Web.Host/appsettings.Staging.json
@@ -3,7 +3,7 @@
     "Default": "Server=10.0.75.1; Database=eConLabDb; User=sa; Password=123qwe;"
   },
   "App": {
-    "ServerRootAddress": "http://localhost:9902/",
-    "CorsOrigins": "http://localhost:9902"
+    "ServerRootAddress": "http://emawadsw-001-site2.gtempurl.com/",
+    "CorsOrigins": "http://emawadsw-001-site1.gtempurl.com,http://emawadsw-001-site2.gtempurl.com,http://localhost:9902"
   }
 }
