--- a/aspnet-core/src/eConLab.Web.Host/appsettings.json
+++ b/aspnet-core/src/eConLab.Web.Host/appsettings.json
@@ -1,11 +1,12 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
+   "Default": "Server=localhost\\MSSQLSERVER01; Database=eConLabDb; Trusted_Connection=True;"
+   // "Default": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a94913_econlabdb;Persist Security Info=True;User ID=db_a94913_econlabdb_admin;Password=STst_123456"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://emawadsw-001-site1.gtempurl.com,http://emawadsw-001-site2.gtempurl.com,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
   },
   "Authentication": {
     "JwtBearer": {
