--- a/aspnet-core/src/eConLab.Migrator/appsettings.json
+++ b/aspnet-core/src/eConLab.Migrator/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
-   // "Default": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a94913_econlabdb;Persist Security Info=True;User ID=db_a94913_econlabdb_admin;Password=STst_123456"
+   // "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
+    "Default": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a94913_econlabdb;Persist Security Info=True;User ID=db_a94913_econlabdb_admin;Password=STst_123456"
   }
 }
