--- a/aspnet-core/src/eConLab.Web.Host/appsettings.json
+++ b/aspnet-core/src/eConLab.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-   "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
-   // "Default": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a94913_econlabdb;Persist Security Info=True;User ID=db_a94913_econlabdb_admin;Password=STst_123456"
+  // "Default": "Server=.; Database=eConLabDb; Trusted_Connection=True;"
+    "Default": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a94913_econlabdb;Persist Security Info=True;User ID=db_a94913_econlabdb_admin;Password=STst_123456"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
