--- a/angular/package.json
+++ b/angular/package.json
@@ -13,6 +13,7 @@
     "test": "ng test"
   },
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^12.0.5",
     "@angular/common": "^12.0.5",
     "@angular/compiler": "^12.0.5",
@@ -23,6 +24,7 @@
     "@angular/router": "^12.0.5",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@types/googlemaps": "^3.39.13",
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.1.0",
